# motif_elev

./: .gitignore  CMakeLists.txt  README.md
lib/elevator/: CMakeLists.txt  elevator.cpp  elevator.h
src/: example.cpp  main.cpp
